# pavepoTest

./: .env-example  .gitignore  README.md  docker-compose.yml
app/: Dockerfile  main.py  pyproject.toml  requirements.txt
app/audio_storage/: models.py  router.py  services.py  utils.py
app/auth/: models.py  permissions.py  router.py  services.py
app/config/: db_session.py  general.py
app/migrations/: env.py
app/migrations/versions/: 5fe649a429fe_initial_migration.py  a099ddd8cf41_initial_migration.py  eba771ee0382_initial_migration.py
